<resources>
    <string name="app_name">App1</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
</resources>
